[gd_scene load_steps=51 format=2]

[ext_resource path="res://SCENE/Lock.gd" type="Script" id=1]
[ext_resource path="res://IMAGENS_ICONES/Icon_Collection.png" type="Texture" id=2]
[ext_resource path="res://SCENE/AA.gd" type="Script" id=3]
[ext_resource path="res://SCENE/CARDS_DISPLAY.gd" type="Script" id=4]
[ext_resource path="res://IMAGENS_ICONES/2left.png" type="Texture" id=5]
[ext_resource path="res://IMAGENS_ICONES/2right.png" type="Texture" id=6]
[ext_resource path="res://SCENE/FullScreenCard.tscn" type="PackedScene" id=7]
[ext_resource path="res://others/MediumFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://SCENE/SET_SELECT.gd" type="Script" id=9]
[ext_resource path="res://SCENE/SLIDER.tscn" type="PackedScene" id=10]
[ext_resource path="res://others/SIMPLIFICA Typeface.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://SCENE/LOGO.gd" type="Script" id=12]
[ext_resource path="res://SCENE/SEARCHER.gd" type="Script" id=13]
[ext_resource path="res://Fonts/LOGO_B_TEXT.tres" type="DynamicFont" id=14]
[ext_resource path="res://IMAGENS_ICONES/unlocked.png" type="Texture" id=15]
[ext_resource path="res://IMAGENS_ICONES/locked.png" type="Texture" id=16]
[ext_resource path="res://SCENE/FileDialog.gd" type="Script" id=17]
[ext_resource path="res://IMAGENS_ICONES/Import.png" type="Texture" id=18]
[ext_resource path="res://IMAGENS_ICONES/Export.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 245, 50 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 115, 25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 115, 25 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 60, 25 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 62, 25 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 40, 25 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 45, 25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 85, 25 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 40, 25 )

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 40, 25 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 35, 25 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 960, 540 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="Theme" id=24]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 14 )
HScrollBar/styles/grabber_highlight = SubResource( 15 )
HScrollBar/styles/grabber_pressed = SubResource( 16 )
HScrollBar/styles/scroll = SubResource( 17 )
HScrollBar/styles/scroll_focus = SubResource( 18 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 19 )
VScrollBar/styles/grabber_highlight = SubResource( 20 )
VScrollBar/styles/grabber_pressed = SubResource( 21 )
VScrollBar/styles/scroll = SubResource( 22 )
VScrollBar/styles/scroll_focus = SubResource( 23 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 30, 75 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 30, 75 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 30, 40 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 30, 40 )

[node name="COLLECTION" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="LOGO" type="Sprite" parent="."]
position = Vector2( 960, 75 )
texture = ExtResource( 2 )
offset = Vector2( -200, 0 )
script = ExtResource( 12 )

[node name="TSB" type="TouchScreenButton" parent="LOGO"]
shape = SubResource( 1 )
shape_centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="LOGO"]
margin_left = -132.0
margin_top = -33.0
margin_right = 241.0
margin_bottom = 53.0
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[center]Collection"
text = "Collection"
scroll_active = false

[node name="AA" type="KinematicBody2D" parent="."]
position = Vector2( 0, 425 )
input_pickable = true
script = ExtResource( 3 )

[node name="CS2D" type="CollisionPolygon2D" parent="AA"]
position = Vector2( 962.5, 0 )
polygon = PoolVector2Array( -960, -250, -960, 250, 960, 250, 960, -250 )

[node name="TOP_MENU" type="Node2D" parent="."]

[node name="SET_SELECT" type="Node2D" parent="TOP_MENU"]
script = ExtResource( 9 )

[node name="TXT_SET" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 10.0
margin_top = 11.543
margin_right = 240.0
margin_bottom = 83.543
custom_fonts/normal_font = ExtResource( 8 )
text = "Which Set?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_SET"]
shape = SubResource( 3 )

[node name="TXT_CARD1" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 225.0
margin_top = 12.0
margin_right = 465.0
margin_bottom = 84.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Which Card?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_CARD1"]
shape = SubResource( 4 )

[node name="TXT_CARD2" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 470.0
margin_top = 12.0
margin_right = 710.0
margin_bottom = 84.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Which Card?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_CARD2"]
shape = SubResource( 5 )

[node name="TXT_RARITY" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1221.0
margin_top = 12.0
margin_right = 1345.0
margin_bottom = 76.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Rarity*"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_RARITY"]
shape = SubResource( 29 )

[node name="TXT_LIMIT" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1361.0
margin_top = 12.0
margin_right = 1490.0
margin_bottom = 76.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Limits*"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_LIMIT"]
shape = SubResource( 30 )

[node name="TXT_FAV" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1504.0
margin_top = 12.0
margin_right = 1589.0
margin_bottom = 76.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Fav*"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_FAV"]
shape = SubResource( 31 )

[node name="TXT_QTD" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1601.0
margin_top = 12.0
margin_right = 1696.0
margin_bottom = 76.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Qtd*"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_QTD"]
shape = SubResource( 32 )

[node name="TXT_TYPE1" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 224.0
margin_top = 75.9685
margin_right = 464.0
margin_bottom = 147.969
custom_fonts/normal_font = ExtResource( 8 )
text = "Which Type?"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_TYPE1"]
shape = SubResource( 4 )

[node name="TXT_TYPE2" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 470.0
margin_top = 75.968
margin_right = 710.0
margin_bottom = 147.969
custom_fonts/normal_font = ExtResource( 8 )
text = "Which Type?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_TYPE2"]
shape = SubResource( 4 )

[node name="TXT_ATTRIB" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1220.0
margin_top = 76.0
margin_right = 1400.0
margin_bottom = 148.0
custom_fonts/normal_font = ExtResource( 8 )
text = "Attribute?"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_ATTRIB"]
shape = SubResource( 6 )

[node name="TXT_ATK" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1420.0
margin_top = 76.0
margin_right = 1513.0
margin_bottom = 148.0
custom_fonts/normal_font = SubResource( 7 )
text = "ATK*"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_ATK"]
shape = SubResource( 8 )

[node name="TXT_DEF" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1520.0
margin_top = 76.0
margin_right = 1618.0
margin_bottom = 148.0
custom_fonts/normal_font = SubResource( 9 )
text = "DEF*"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_DEF"]
shape = SubResource( 10 )

[node name="TXT_LV" type="RichTextLabel" parent="TOP_MENU/SET_SELECT"]
margin_left = 1620.0
margin_top = 76.0
margin_right = 1700.0
margin_bottom = 148.0
custom_fonts/normal_font = SubResource( 11 )
text = "LV"
scroll_active = false

[node name="BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT/TXT_LV"]
shape = SubResource( 12 )

[node name="THE_BUTTON" type="TouchScreenButton" parent="TOP_MENU/SET_SELECT"]
shape = SubResource( 13 )

[node name="TXT_ALLSETS" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
margin_left = 9.0
margin_top = 2.0
margin_right = 458.0
margin_bottom = 1077.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "
All Sets
SS01
SS02
SBLS
STP1
SBAD
SS03
SBSC
STP2
SBTK
SBTKs
EVSD"
scroll_active = false

[node name="TXT_ALLCARD1" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 225.0
margin_right = 456.0
margin_bottom = 1075.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 0
text = "
All Cards
Monster
Spell
Trap
Skill"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TXT_ALLCARD2" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 470.0
margin_right = 701.0
margin_bottom = 1075.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 0
text = "
Normal
Continuous
Field
Ritual
Effect
Fusion
Quick-Play
Equip
Counter"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TXT_ALLTYPE1" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 225.0
margin_top = 2.0
margin_right = 1883.0
margin_bottom = 1072.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

SHOW ALL
JADEN & SYRUS"
scroll_active = false

[node name="TXT_ALLTYPE1a" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 515.0
margin_top = 1.0
margin_right = 2173.0
margin_bottom = 1071.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

SHOW ALL
DINOUSAUR"
scroll_active = false

[node name="TXT_ALLTYPE1b" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 805.0
margin_top = 1.0
margin_right = 2463.0
margin_bottom = 1071.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

SHOW ALL
DINOUSAUR"
scroll_active = false

[node name="TXT_ALLTYPE1c" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 1095.0
margin_top = 1.0
margin_right = 2753.0
margin_bottom = 1071.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

SHOW ALL
DINOUSAUR"
scroll_active = false

[node name="TXT_ALLTYPE1d" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 1395.0
margin_top = 1.0
margin_right = 2753.0
margin_bottom = 1071.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

SHOW ALL
DINOUSAUR"
scroll_active = false

[node name="TXT_ALLTYPE1e" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 1695.0
margin_top = 1.0
margin_right = 2753.0
margin_bottom = 1071.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

SHOW ALL
DINOUSAUR"
scroll_active = false

[node name="TXT_ALLTYPE2" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 473.0
margin_top = 5.0
margin_right = 1883.0
margin_bottom = 1075.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 5
text = "

Show all
Toon
Union"
scroll_active = false

[node name="TXT_ALLATTRIB" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 1220.0
margin_top = 1.0
margin_right = 1451.0
margin_bottom = 1076.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 0
text = "
ALL"
scroll_active = false

[node name="TXT_ALLRARITY" type="RichTextLabel" parent="TOP_MENU/SET_SELECT/THE_BUTTON"]
visible = false
margin_left = 1220.0
margin_right = 1720.0
margin_bottom = 1075.0
custom_fonts/normal_font = ExtResource( 8 )
meta_underlined = false
tab_size = 0
text = "
SHOW ALL
Common
Super Rare
Ultra Rare
Secret Rare
Prismatic Secret Rare"
scroll_active = false

[node name="SLIDER" parent="TOP_MENU/SET_SELECT" instance=ExtResource( 10 )]
position = Vector2( 912.484, 178.176 )

[node name="SEARCHER" type="TextEdit" parent="TOP_MENU/SET_SELECT"]
margin_left = 1704.0
margin_top = 13.0
margin_right = 1909.0
margin_bottom = 100.0
theme = SubResource( 24 )
custom_colors/background_color = Color( 0.105882, 0.0784314, 0.392157, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Txt Search"
syntax_highlighting = true
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false
hiding_enabled = true
script = ExtResource( 13 )

[node name="SET" type="Node2D" parent="."]

[node name="CARDS_DISPLAY" type="Node2D" parent="SET"]
script = ExtResource( 4 )

[node name="LeftArrow" type="TouchScreenButton" parent="SET/CARDS_DISPLAY"]
position = Vector2( 35, 517 )
normal = ExtResource( 5 )
shape = SubResource( 25 )

[node name="RightArrow" type="TouchScreenButton" parent="SET/CARDS_DISPLAY"]
position = Vector2( 1816.06, 517 )
normal = ExtResource( 6 )
shape = SubResource( 26 )

[node name="TXT_PG" type="RichTextLabel" parent="SET/CARDS_DISPLAY"]
margin_left = 1736.0
margin_top = 1026.0
margin_right = 1919.0
margin_bottom = 1081.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
bbcode_text = "00/00"
meta_underlined = false
tab_size = 0
text = "00/00"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tw" type="Tween" parent="SET/CARDS_DISPLAY"]

[node name="Lock" type="CheckBox" parent="SET/CARDS_DISPLAY"]
margin_top = 1006.4
margin_right = 53.0
margin_bottom = 1079.4
custom_icons/checked = ExtResource( 16 )
custom_icons/unchecked = ExtResource( 15 )
pressed = true
script = ExtResource( 1 )

[node name="FullScreenCard" parent="SET" instance=ExtResource( 7 )]
visible = false

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="FileDialog" type="Node2D" parent="."]
visible = false
script = ExtResource( 17 )

[node name="IMPORT" type="TouchScreenButton" parent="FileDialog"]
position = Vector2( 1844.13, 989.948 )
normal = ExtResource( 18 )
shape = SubResource( 27 )

[node name="EXPORT" type="TouchScreenButton" parent="FileDialog"]
position = Vector2( 2.82825, 987.119 )
normal = ExtResource( 19 )
shape = SubResource( 28 )

[node name="FileDialog" type="FileDialog" parent="FileDialog"]
margin_right = 307.0
margin_bottom = 130.0
rect_min_size = Vector2( 150, 52.5 )
rect_scale = Vector2( 2, 2 )
access = 2
show_hidden_files = true

[node name="TXT" type="RichTextLabel" parent="FileDialog"]
margin_left = 80.0
margin_top = 1024.0
margin_right = 1844.0
margin_bottom = 1084.0
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
